@@ -11,8 +11,7 @@ Il est nécessaire au préalable d'activer temporairement le debug de Jeedom (me
 
 .Pourquoi le plugin est gratuit ?
 --
-Ce plugin est gratuit pour que chacun puisse en profiter simplement. Si vous souhaitez tout de même faire un don au développeur du plugin, utilisez le lien suivant.
-link:https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VKQSEAWM38VVU[Faire un don au développeur du plugin]
+Ce plugin est gratuit pour que chacun puisse en profiter simplement. Si vous souhaitez tout de même faire un don au développeur du plugin, merci de me demander un lien par MP sur le forum.
 --
 
 .J'aimerai remonter des erreurs/modifications directement dans le code ?
