@@ -3,11 +3,12 @@ WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plu
 
 Liste des évolutions majeures de la version courante :
 
-- Modification pour compatibilité Jeedom V3
-- Plus de suivi de version
+- Suppression du lien Paypal pour être conforme avec Jeedom V3.1
 
 Anciennes évolutions :
 
+- Modification pour compatibilité Jeedom V3
+- Plus de suivi de version
 - Prise en compte de l'application mobile
 - Modification de l'extension du logo.
 - Compatibilité Imperihome
